fix input field text color in dark mode

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -19,6 +19,6 @@ input, .sortable-list {
     background-color: var(--bg-secondary-color);
 }
 
-::placeholder {
+input::placeholder, input {
     color: var(--font-color);
 }
